@@ -15,5 +15,6 @@ Carlos Nieves <cnieves.AT.iname.com>
 Salvador Tropea <salvador.AT.inti.gov.ar>
 Marko Kohtala <marko.kohtala.AT.gmail.com>
 Borut Razem <borut.razem.AT.users.sourceforge.net>
+Molnar Karoly <proton7.AT.freemail.hu>
 
 Have you been overlooked?
