@@ -29,6 +29,7 @@ make
 
 %install
 make DESTDIR="$RPM_BUILD_ROOT" install
+make DESTDIR="$RPM_BUILD_ROOT" install-html
 
 %clean
 [ ${RPM_BUILD_ROOT} != "/" ] && rm -rf ${RPM_BUILD_ROOT}
@@ -47,4 +48,4 @@ make DESTDIR="$RPM_BUILD_ROOT" install
 %{_datadir}/gputils/header
 %{_datadir}/gputils/lkr
 %doc AUTHORS COPYING ChangeLog NEWS README 
-%doc doc/gputils.pdf doc/gputils.ps
+%doc doc/gputils.pdf doc/gputils.ps doc/html/*.css doc/html/*.html
