@@ -1,4 +1,12 @@
 2012-09-11  Molnar Karoly  <proton7@freemail.hu>
+  * AUTHORS: updated
+  * doc/html-help/Makefile.am, configure.ac:
+    Implemented the --disable-html-doc configure option.
+  * gputils.spec.in: modified
+  * doc/html-help/Makefile.in, doc/Makefile.in, Makefile.in,
+    configure: updated autotools
+
+2012-09-11  Molnar Karoly  <proton7@freemail.hu>
   * doc/html-help, doc/html-help/Makefile.am:
     Implemented html help for PIC devices.
   * doc/Makefile.am: modified
